Added footer links and custom CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10959,6 +10959,23 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxMA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxNA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwy {}
+.bd-customhtml-2 {
+  height: 135px;
+}
+.bd-customhtml-2 {
+  text-align: center;
+}
+.footer-links a {
+  color: #fff !important;
+}
+.footer-links {
+  color: #fff !important;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw0 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw0 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw1 {}
@@ -11086,6 +11103,19 @@ a.bd-backtotop-1:hover {
   line-height: 24px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rMg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rMw {}
+.bd-icon-40:before {
+  content: '\136';
+}
+.bd-icon-40:before {
+  visibility: inherit;
+}
+.bd-icon-40:before {
+  font-size: 24px;
+  line-height: 34.2857143px;
+  line-height: 24px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rMw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rNQ {}
 .bd-icon-27:before {
   content: '\157';
@@ -11100,20 +11130,6 @@ a.bd-backtotop-1:hover {
   line-height: 24px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rNQ {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rNw {}
-.bd-icon-30:before {
-  content: '\288';
-}
-.bd-icon-30:before {
-  visibility: inherit;
-}
-.bd-icon-30:before {
-  font-size: 24px;
-  color: #ffffff;
-  line-height: 34.2857143px;
-  line-height: 24px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazE {}
 .bd-imagelink-1 {
   width: 190px;
@@ -11439,6 +11455,8 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQx {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc {}
@@ -12621,6 +12639,11 @@ h2.bd-postheader-4 a {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNQ {}
+.bd-section-25 h2 {
+  color: #858585;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb240 {}
 .bd-section-4 {
   background-color: #ffffff;
@@ -13131,6 +13154,17 @@ h1.bd-textblock-14 {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0MQ {}
+.bd-textblock-141 {
+  margin-top: 18px;
+  height: 140px;
+}
+.bd-textblock-141 {
+  line-height: 22.85714286px;
+  font-size: 16px;
+  color: #555555;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0MQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
@@ -13138,8 +13172,6 @@ h1.bd-textblock-14 {
   margin-top: 17px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5 {}
 .bd-textblock-19 {
   margin-top: 0px;
@@ -13164,7 +13196,9 @@ h2.bd-textblock-19 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIy {}
 .bd-textblock-22 {
-  margin: 0px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 46px 0px 18px;
 }
 @media (max-width: 767px) {
   .bd-textblock-22 {
@@ -17277,4 +17311,8 @@ a.bd-button-2[href]:focus,
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL3R5cGVTZWxlY3Rvcg {}
 #marker-start-L3N0eWxlLmNzcw.L3Byb3RvdHlwZXMvQWRkaXRpb25hbENzcw {}
+.twenty {
+  color: #ff6600;
+  list-style-type: none !important;
+}
 #marker-end-L3N0eWxlLmNzcw.L3Byb3RvdHlwZXMvQWRkaXRpb25hbENzcw {}
