--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12640,6 +12640,16 @@ h2.bd-postheader-4 a {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNQ {}
+.bd-section-25 {
+  background-color: #f2f2f2;
+  height: 330px;
+  -webkit-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
+  -o-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
+  -ms-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: -51px;
+}
 .bd-section-25 h2 {
   color: #858585;
 }
@@ -12668,6 +12678,7 @@ h2.bd-postheader-4 a {
 .bd-section-7 {
   padding-top: 3em;
   padding-bottom: 2em;
+  margin-top: -51px;
 }
 .bd-section-7 {
   line-height: 27.2px;
