--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11800,9 +11800,15 @@ a.bd-backtotop-1:hover {
   -ms-transform: translateX(0) translateY(-50%);
   transform: translateX(0) translateY(-50%);
 }
+@media (max-width: 991px) {
+  .bd-layoutbox-37 {
+    top: 30%;
+  }
+}
 @media (max-width: 767px) {
   .bd-layoutbox-37 {
     width: 100%;
+    top: 30%;
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM3 {}
